--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,13 @@ beautifulsoup4==4.12.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 Django==4.2.4
+gunicorn==21.2.0
 idna==3.4
+packaging==23.1
 requests==2.31.0
 soupsieve==2.4.1
 sqlparse==0.4.4
 tzdata==2023.3
 urllib3==2.0.4
+whitenoise==6.5.0
+
